Ретинизирует контентные и фоновые изображения, добавляет изображению нейтральный фон, меняет отступы

--- a/source/index.html
+++ b/source/index.html
@@ -120,13 +120,22 @@
                       Метеоры.</p>
                     <button data-modal-button="modal" type="button">купить тур сейчас</button>
                   </div>
-                  <div class="item-comment-wrapper item-comment-wrapper--greece">
+                  <div class="item-comment-wrapper">
+                    <div class="item-comment-img">
+                      <picture>
+                        <source srcset="img/greece-tabs1x.webp 1x, img/greece-tabs2x.webp 2x" type="image/webp">
+                        <img src="img/greece-tabs.png" width="430" height="597" alt="Изображение Греции">
+                      </picture>                      
+                    </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
                       <p>Метеоры в Греции можно сравнить разве что с Монсератт в Испании. Такие же высоченные скалы. Но
                         здесь потрясает масштаб. Огромная территория, высоко в горах. Ощущение такое, как будто стоишь
                         на краю света!</p>
-                      <span class="item-avatar item-avatar--greece">Влада Голицина</span>
+                        <div class="item-avatar">
+                          <img src="img/ava-greece.png" width="38" height="38" alt="Коментатор">
+                          <p>Влада Голицина</p>                          
+                        </div>
                     </div>
                   </div>
                 </div>
@@ -141,12 +150,21 @@
                       до такого мелкого состояния. </p>
                     <button data-modal-button="modal" type="button">купить тур сейчас</button>
                   </div>
-                  <div class="item-comment-wrapper item-comment-wrapper--albania">
+                  <div class="item-comment-wrapper">
+                    <div class="item-comment-img">
+                      <picture>
+                        <source srcset="img/albania-tabs1x.webp 1x, img/albania-tabs2x.webp 2x" type="image/webp">
+                        <img src="img/albania-tabs.png" width="430" height="596" alt="Изображение Албании">
+                      </picture>                      
+                    </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
                       <p>Замечательный курорт, обязательно стоит посетить. В следующий раз возьму с собой сестру, чтобы
                         тоже смогла вкусить все красоты природы :)</p>
-                      <span class="item-avatar item-avatar--albania">Маришка</span>
+                      <div class="item-avatar">
+                        <img src="img/ava-albania.png" width="38" height="38" alt="Коментатор">
+                        <p>Маришка</p>
+                      </div>                      
                     </div>
                   </div>
                 </div>
@@ -160,13 +178,19 @@
                       горы Татичев Камен, где находится археологический памятник Кокино в длину около 100 метров.</p>
                     <button data-modal-button="modal" type="button">купить тур сейчас</button>
                   </div>
-                  <div class="item-comment-wrapper item-comment-wrapper--macedonia">
+                  <div class="item-comment-wrapper">
+                    <div class="item-comment-img">
+                      <img src="img/macedonia-tabs.png" width="430" height="596" alt="Изображение Македонии">
+                    </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
                       <p>Я бы сказал необычное старое здание. В архитектуре я не разбираюсь, но подъем в гору был очень
                         веселым, так как люди оказались легкими и заводными. Красота природы впечатлила, особенно после
                         долгого пути в гору.</p>
-                      <span class="item-avatar item-avatar--macedonia">Михаил Кузьмин</span>
+                      <div class="item-avatar">
+                        <img src="img/ava-macedonia.png" width="38" height="38" alt="Коментатор">
+                        <p>Михаил Кузьмин</p>
+                      </div>                      
                     </div>
                   </div>
                 </div>
@@ -180,12 +204,21 @@
                       составляет 80 км. </p>
                     <button data-modal-button="modal" type="button">купить тур сейчас</button>
                   </div>
-                  <div class="item-comment-wrapper item-comment-wrapper--montenegro">
+                  <div class="item-comment-wrapper">
+                    <div class="item-comment-img">
+                      <picture>
+                        <source srcset="img/montenegro-tabs1x.webp 1x, img/montenegro-tabs2x.webp 2x" type="image/webp">
+                        <img src="img/montenegro-tabs.png" width="430" height="596" alt="Изображение Черногории">
+                      </picture>                      
+                    </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
                       <p>Неописуемой красоты каньон! Ничего прекраснее в жизни не видела, разве что в фильмах :) Всем
                         советую</p>
-                      <span class="item-avatar item-avatar--montenegro">Анастасия Мей</span>
+                      <div class="item-avatar">
+                        <img src="img/ava-montenegro.png" width="38" height="38" alt="Коментатор">
+                        <p class="item-avatar item-avatar--montenegro">Анастасия Мей</p>
+                      </div>                      
                     </div>
                   </div>
                 </div>
@@ -199,13 +232,22 @@
                       скульптурами — сталактитами и сталагмитами — формировавшимися тысячи и тысячи лет.</p>
                     <button data-modal-button="modal" type="button">купить тур сейчас</button>
                   </div>
-                  <div class="item-comment-wrapper item-comment-wrapper--croatia">
+                  <div class="item-comment-wrapper">
+                    <div class="item-comment-img">
+                      <picture>
+                        <source srcset="img/croatia-tabs1x.webp 1x, img/croatia-tabs2x.webp 2x" type="image/webp">
+                        <img src="img/croatia-tabs.png" width="430" height="596" alt="Изображение Хорватии">
+                      </picture>                      
+                    </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
                       <p>Мы поехали всей семьей: я, моя жена и родители. Пещера просто незабываема! А то, что все это
                         формировалось тысячелетиями, мега необычно. Первоначально даже не верилось, но натур ни с чем не
                         спутать по итогу :)</p>
-                      <p class="item-avatar item-avatar--croatia">Владимир Мулицин</p>
+                      <div class="item-avatar">
+                        <img src="img/ava-croatia.png" width="38" height="38" alt="Коментатор">
+                        <p>Владимир Мулицин</p>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -213,6 +255,7 @@
             </ul>
             <div id="tabs__price" class="tabs__price price">
               <div class="price__wrapper">
+                <h2 class="visually-hidden">Ознакомьтесь с нашими тарифами</h2>
                 <div class="price__content price__content--all-in">
                   <div class="price__title">
                     <h3>Комплексный</h3>
@@ -356,7 +399,10 @@
       <div id="modal" class="modal-overlay">
         <div class="modal-window">
           <div class="modal-window__img">
-            <img src="img/modal-img.png" width="338" height="444" alt="Изображение модального окна">
+            <picture>
+              <source srcset="img/modal-img1x.webp 1x, img/modal-img2x.webp 2x" type="image/webp">
+              <img src="img/modal-img.png" width="338" height="444" alt="Изображение модального окна">
+            </picture>            
           </div>
           <div class="modal-window__wrapper">
             <button class="modal-window__close-btn" data-modal-close type="button">Закрыть модальное окно</button>
