--- a/source/index.html
+++ b/source/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="visited-list">
               <div class="visited-item visited-item--greece">
-                <div class="visited-button">
+                <div class="visited-button" data-tab="1">
                   <a href="#tabs">смотреть подробнее</a>
                 </div>
                 <div class="visited-title">
@@ -65,7 +65,7 @@
                 </div>
               </div>
               <div class="visited-item visited-item--albania">
-                <div class="visited-button">
+                <div class="visited-button" data-tab="2">
                   <a href="#tabs">смотреть подробнее</a>
                 </div>
                 <div class="visited-title">
@@ -73,7 +73,7 @@
                 </div>
               </div>
               <div class="visited-item visited-item--macedonia">
-                <div class="visited-button">
+                <div class="visited-button" data-tab="3">
                   <a href="#tabs">смотреть подробнее</a>
                 </div>
                 <div class="visited-title">
@@ -81,7 +81,7 @@
                 </div>
               </div>
               <div class="visited-item visited-item--montenegro">
-                <div class="visited-button">
+                <div class="visited-button" data-tab="4">
                   <a href="#tabs">смотреть подробнее</a>
                 </div>
                 <div class="visited-title">
@@ -89,7 +89,7 @@
                 </div>
               </div>
               <div class="visited-item visited-item--croatia">
-                <div class="visited-button">
+                <div class="visited-button" data-tab="5">
                   <a href="#tabs">смотреть подробнее</a>
                 </div>
                 <div class="visited-title">
@@ -125,7 +125,7 @@
                       <picture>
                         <source srcset="img/greece-tabs1x.webp 1x, img/greece-tabs2x.webp 2x" type="image/webp">
                         <img src="img/greece-tabs.png" width="430" height="597" alt="Изображение Греции">
-                      </picture>                      
+                      </picture>
                     </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
@@ -134,7 +134,7 @@
                         на краю света!</p>
                         <div class="item-avatar">
                           <img src="img/ava-greece.png" width="38" height="38" alt="Коментатор">
-                          <p>Влада Голицина</p>                          
+                          <p>Влада Голицина</p>
                         </div>
                     </div>
                   </div>
@@ -155,7 +155,7 @@
                       <picture>
                         <source srcset="img/albania-tabs1x.webp 1x, img/albania-tabs2x.webp 2x" type="image/webp">
                         <img src="img/albania-tabs.png" width="430" height="596" alt="Изображение Албании">
-                      </picture>                      
+                      </picture>
                     </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
@@ -164,7 +164,7 @@
                       <div class="item-avatar">
                         <img src="img/ava-albania.png" width="38" height="38" alt="Коментатор">
                         <p>Маришка</p>
-                      </div>                      
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -190,7 +190,7 @@
                       <div class="item-avatar">
                         <img src="img/ava-macedonia.png" width="38" height="38" alt="Коментатор">
                         <p>Михаил Кузьмин</p>
-                      </div>                      
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -209,7 +209,7 @@
                       <picture>
                         <source srcset="img/montenegro-tabs1x.webp 1x, img/montenegro-tabs2x.webp 2x" type="image/webp">
                         <img src="img/montenegro-tabs.png" width="430" height="596" alt="Изображение Черногории">
-                      </picture>                      
+                      </picture>
                     </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
@@ -218,7 +218,7 @@
                       <div class="item-avatar">
                         <img src="img/ava-montenegro.png" width="38" height="38" alt="Коментатор">
                         <p class="item-avatar item-avatar--montenegro">Анастасия Мей</p>
-                      </div>                      
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -237,7 +237,7 @@
                       <picture>
                         <source srcset="img/croatia-tabs1x.webp 1x, img/croatia-tabs2x.webp 2x" type="image/webp">
                         <img src="img/croatia-tabs.png" width="430" height="596" alt="Изображение Хорватии">
-                      </picture>                      
+                      </picture>
                     </div>
                     <div class="item-comment">
                       <h3>Отзывы</h3>
@@ -402,7 +402,7 @@
             <picture>
               <source srcset="img/modal-img1x.webp 1x, img/modal-img2x.webp 2x" type="image/webp">
               <img src="img/modal-img.png" width="338" height="444" alt="Изображение модального окна">
-            </picture>            
+            </picture>
           </div>
           <div class="modal-window__wrapper">
             <button class="modal-window__close-btn" data-modal-close type="button">Закрыть модальное окно</button>
@@ -425,6 +425,6 @@
       </div>
       <script src="js/vendor.js"></script>
       <script src="js/main.js"></script>
-  </div>  
+  </div>
 </body>
 </html>
